--- a/README
+++ b/README
@@ -110,7 +110,7 @@ Demo:
 License:
 
   MIT License
-  Copyright (c) 2018 Michael Ortmann
+  Copyright (c) 2018 - 2022 Michael Ortmann
 
 Website:
 
